deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketportal-ingress
  namespace: ticketportal
spec:
  ingressClassName: nginx
  rules:
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: gateway
                  port:
                    number: 8080
